<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_bottom"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />

    <item
        android:id="@+id/cart_bottom"
        android:icon="@drawable/outline_add_shopping_cart_24"
        android:title="@string/cart" />

    <item
        android:id="@+id/order_bottom"
        android:icon="@drawable/icon_order"
        android:title="@string/orders" />

     <item
        android:id="@+id/map_bottom"
        android:icon="@drawable/icons_map"
        android:title="@string/map" />

    <item
        android:id="@+id/profile_bottom"
        android:icon="@drawable/icon_person"
        android:title="@string/profile" />



</menu>
