<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cart_bg"
    android:padding="16dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/cart_text_primary"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_location"
            app:tint="@color/orange"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cart_address"
            android:paddingStart="8dp"
            android:textColor="@color/cart_text_primary"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_time"
            app:tint="@color/orange"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cart_prep_time"
            android:paddingStart="8dp"
            android:textSize="14sp"
            android:textColor="@color/cart_text_primary"/>

        <TextView
            android:id="@+id/cartPrepTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_prep_time_value"
            android:textColor="@color/cart_text_secondary"
            android:textSize="14sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="12dp"/>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cart_divider"
        android:layout_marginVertical="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/cart_text_primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_card"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/cart_text_primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subtotal"
            android:textColor="@color/cart_text_primary"/>

        <TextView
            android:id="@+id/cartSubtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal_value"
            android:textColor="@color/cart_text_primary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/convenience_fee"
            android:textColor="@color/cart_text_primary"/>

        <TextView
            android:id="@+id/cartFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fee_value"
            android:textColor="@color/cart_text_primary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textStyle="bold"
            android:textColor="@color/cart_text_primary"/>

        <TextView
            android:id="@+id/cartTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_value"
            android:textStyle="bold"
            android:textColor="@color/cart_text_primary"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/orange"
        android:text="@string/place_order"
        app:cornerRadius="10dp"

        android:textColor="@android:color/white" />
</LinearLayout>
