<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>

    <FrameLayout
        android:id="@+id/profileContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/backIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_person_24"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/CircularImage"/>

        <ImageView
            android:id="@+id/cameraIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_camera"
            android:background="@drawable/circle_white"
            android:padding="6dp"
            android:elevation="4dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="4dp"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/editForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="22dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/profileContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- الاسم الكامل -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_full_name"
            android:background="@drawable/rounded_white_box"
            android:paddingHorizontal="16dp"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_email"
            android:background="@drawable/rounded_white_box"
            android:paddingHorizontal="16dp"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"/>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_phone"
            android:background="@drawable/rounded_white_box"
            android:paddingHorizontal="16dp"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"/>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_address"
            android:background="@drawable/rounded_white_box"
            android:paddingHorizontal="16dp"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:inputType="textPostalAddress"
            android:layout_marginBottom="10dp"/>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_password"
            android:background="@drawable/rounded_white_box"
            android:paddingHorizontal="16dp"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:inputType="textPassword|textVisiblePassword"
            android:layout_marginBottom="18dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/save_changes"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/editForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="24dp"
        app:cornerRadius="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
