<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    android:backgroundTint="@color/order_card_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_title_example"
                android:textColor="@color/order_card_text_primary"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/orderTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_total_example"
                android:textColor="@color/order_card_text_primary"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/orderDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/order_details_example"
            android:textColor="@color/order_card_text_secondary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/orderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="end"
            android:text="@string/order_date_example"
            android:textColor="@color/orange"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
